# RecruitmentAgent

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  start.sh  test.py  test2.py  test3.py  test4.py  ui_utils.py
Images/: cv_template_hero.avif
Interview/: agent_runner.py  livekit_token.py  prompts.py
Interview/frontend/: .env.example  README.md  package.json  pnpm-lock.yaml  vite.config.js
Interview/frontend/src/: App.css  App.jsx
Interview/frontend/src/components/: LiveKitModal.jsx  SimpleVoiceAssistant.css  SimpleVoiceAssistant.jsx
agents/: analysis_agent.py  interview_agent.py  job_search_agent.py  resume_agent.py
browser_use_config/: device_id
saved_jobs/: AI_Engineer_(Agentic_AI)_Hyrfast_20251216153703.json  AI_Engineer_Internship_0-1_years_Analyst_Goldman_Sachs_20251215235634.json  AI_Engineer_Internship_0-1_years_Engineer_GlobalSystems_20251215235725.json  Front-End_Developer,_Creative_and_Marketing_LEVEL_20251216000104.json  Senior_Applied_AI_Engineer_Microsoft_20251216012055.json  Software_Engineer-_Remote_within_Cleveland,_OH,_Atlanta,_GA_or_Austin,_TX_OEC_20251216000230.json  Staff_Software_Engineer_-_Remote_(Expertise_with_Go,_TypeScript_and_Exp_in_R&D_Roles)_MillenniumSoft_Inc_20251216000158.json
utils/: job_scraper.py  job_storage.py  resume_keyword_extractor.py  resume_parser.py  serp_api_searcher.py
